<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/timber_wolf"
    tools:context=".show_qrcode_tab">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="513dp"
        android:layout_marginTop="100dp"
        android:background="@color/burgundy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="354dp"
            android:layout_height="266dp"
            android:alpha="0.9"
            android:background="@color/timber_wolf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.313">


            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/available_balance"
                android:textColor="@color/burgundy"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/user_names"
                app:layout_constraintTop_toBottomOf="@+id/orgs" />

            <TextView
                android:id="@+id/from_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:text="@string/from_or_to"
                android:textColor="@color/burgundy"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sent_received" />

            <TextView
                android:id="@+id/user_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="15dp"
                android:text="@string/user_name"
                android:textColor="@color/burgundy"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sent_received" />

            <TextView
                android:id="@+id/orgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/org"
                android:textColor="@color/burgundy"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/user_names"
                app:layout_constraintTop_toBottomOf="@+id/user_names" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="Amount"
                android:textColor="@color/burgundy"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/from_to"
                app:layout_constraintHorizontal_bias="0.401"
                app:layout_constraintStart_toStartOf="@+id/from_to"
                app:layout_constraintTop_toBottomOf="@+id/from_to" />

            <TextView
                android:id="@+id/sent_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/receive_or_sent"
                android:textColor="@color/burgundy"
                android:textSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="354dp"
            android:layout_height="74dp"
            android:alpha="0.8"
            android:background="@color/timber_wolf"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout7"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout7"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

            <TextView
                android:id="@+id/reff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:alpha="0.8"
                android:text="Ref No:"
                android:textColor="@color/burgundy"
                android:textSize="10dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ref_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:alpha="1"
                android:text="@string/ref"
                android:textColor="@color/burgundy"
                android:textSize="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/reff"
                app:layout_constraintStart_toEndOf="@+id/reff"
                app:layout_constraintTop_toTopOf="@+id/reff" />

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="15dp"
                android:alpha="1"
                android:text="@string/date"
                android:textColor="@color/burgundy"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/disclaimer"
            android:textAlignment="center"
            android:textColor="@color/timber_wolf"
            android:textSize="10dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            app:layout_constraintVertical_bias="0.117" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/download1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/full_round_edges"
        android:onClick="download"
        android:text="DOWNLOAD"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.026" />

</androidx.constraintlayout.widget.ConstraintLayout>
